# CardCounter

./: .gitignore  Cargo.toml  README.md
.github/workflows/: main.yml
src/: db.rs  main.rs  scanner.rs  types.rs
tests/: db_tests.rs
